tests/suite/snapshots/suite__case_9kax.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: Anchor
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: AnchorName
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 8
    line: 1
    column: 3
- token: Break
  start:
    index: 8
    line: 1
    column: 3
  end:
    index: 10
    line: 2
    column: 0
- token: Indent
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 10
    line: 2
    column: 0
- token: TagHandle
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 12
    line: 2
    column: 2
- token: TagSuffix
  start:
    index: 12
    line: 2
    column: 2
  end:
    index: 15
    line: 2
    column: 5
- token: Break
  start:
    index: 15
    line: 2
    column: 5
  end:
    index: 17
    line: 3
    column: 0
- token: Indent
  start:
    index: 17
    line: 3
    column: 0
  end:
    index: 17
    line: 3
    column: 0
- token: Scalar
  start:
    index: 17
    line: 3
    column: 0
  end:
    index: 24
    line: 3
    column: 7
- token: Break
  start:
    index: 24
    line: 3
    column: 7
  end:
    index: 26
    line: 4
    column: 0
- token: DirectivesEnd
  start:
    index: 26
    line: 4
    column: 0
  end:
    index: 29
    line: 4
    column: 3
- token: Break
  start:
    index: 29
    line: 4
    column: 3
  end:
    index: 31
    line: 5
    column: 0
- token: Indent
  start:
    index: 31
    line: 5
    column: 0
  end:
    index: 31
    line: 5
    column: 0
- token: TagHandle
  start:
    index: 31
    line: 5
    column: 0
  end:
    index: 33
    line: 5
    column: 2
- token: TagSuffix
  start:
    index: 33
    line: 5
    column: 2
  end:
    index: 36
    line: 5
    column: 5
- token: Break
  start:
    index: 36
    line: 5
    column: 5
  end:
    index: 38
    line: 6
    column: 0
- token: Indent
  start:
    index: 38
    line: 6
    column: 0
  end:
    index: 38
    line: 6
    column: 0
- token: Anchor
  start:
    index: 38
    line: 6
    column: 0
  end:
    index: 39
    line: 6
    column: 1
- token: AnchorName
  start:
    index: 39
    line: 6
    column: 1
  end:
    index: 41
    line: 6
    column: 3
- token: Break
  start:
    index: 41
    line: 6
    column: 3
  end:
    index: 43
    line: 7
    column: 0
- token: Indent
  start:
    index: 43
    line: 7
    column: 0
  end:
    index: 43
    line: 7
    column: 0
- token: Scalar
  start:
    index: 43
    line: 7
    column: 0
  end:
    index: 50
    line: 7
    column: 7
- token: Break
  start:
    index: 50
    line: 7
    column: 7
  end:
    index: 52
    line: 8
    column: 0
- token: DirectivesEnd
  start:
    index: 52
    line: 8
    column: 0
  end:
    index: 55
    line: 8
    column: 3
- token: Break
  start:
    index: 55
    line: 8
    column: 3
  end:
    index: 57
    line: 9
    column: 0
- token: Indent
  start:
    index: 57
    line: 9
    column: 0
  end:
    index: 57
    line: 9
    column: 0
- token: Anchor
  start:
    index: 57
    line: 9
    column: 0
  end:
    index: 58
    line: 9
    column: 1
- token: AnchorName
  start:
    index: 58
    line: 9
    column: 1
  end:
    index: 60
    line: 9
    column: 3
- token: Break
  start:
    index: 60
    line: 9
    column: 3
  end:
    index: 62
    line: 10
    column: 0
- token: Indent
  start:
    index: 62
    line: 10
    column: 0
  end:
    index: 62
    line: 10
    column: 0
- token: TagHandle
  start:
    index: 62
    line: 10
    column: 0
  end:
    index: 64
    line: 10
    column: 2
- token: TagSuffix
  start:
    index: 64
    line: 10
    column: 2
  end:
    index: 67
    line: 10
    column: 5
- token: Separator
  start:
    index: 67
    line: 10
    column: 5
  end:
    index: 68
    line: 10
    column: 6
- token: Scalar
  start:
    index: 68
    line: 10
    column: 6
  end:
    index: 75
    line: 10
    column: 13
- token: Break
  start:
    index: 75
    line: 10
    column: 13
  end:
    index: 77
    line: 11
    column: 0
- token: DirectivesEnd
  start:
    index: 77
    line: 11
    column: 0
  end:
    index: 80
    line: 11
    column: 3
- token: Break
  start:
    index: 80
    line: 11
    column: 3
  end:
    index: 82
    line: 12
    column: 0
- token: Indent
  start:
    index: 82
    line: 12
    column: 0
  end:
    index: 82
    line: 12
    column: 0
- token: Anchor
  start:
    index: 82
    line: 12
    column: 0
  end:
    index: 83
    line: 12
    column: 1
- token: AnchorName
  start:
    index: 83
    line: 12
    column: 1
  end:
    index: 85
    line: 12
    column: 3
- token: Separator
  start:
    index: 85
    line: 12
    column: 3
  end:
    index: 86
    line: 12
    column: 4
- token: TagHandle
  start:
    index: 86
    line: 12
    column: 4
  end:
    index: 88
    line: 12
    column: 6
- token: TagSuffix
  start:
    index: 88
    line: 12
    column: 6
  end:
    index: 91
    line: 12
    column: 9
- token: Break
  start:
    index: 91
    line: 12
    column: 9
  end:
    index: 93
    line: 13
    column: 0
- token: Indent
  start:
    index: 93
    line: 13
    column: 0
  end:
    index: 93
    line: 13
    column: 0
- token: Anchor
  start:
    index: 93
    line: 13
    column: 0
  end:
    index: 94
    line: 13
    column: 1
- token: AnchorName
  start:
    index: 94
    line: 13
    column: 1
  end:
    index: 96
    line: 13
    column: 3
- token: Separator
  start:
    index: 96
    line: 13
    column: 3
  end:
    index: 97
    line: 13
    column: 4
- token: TagHandle
  start:
    index: 97
    line: 13
    column: 4
  end:
    index: 99
    line: 13
    column: 6
- token: TagSuffix
  start:
    index: 99
    line: 13
    column: 6
  end:
    index: 102
    line: 13
    column: 9
- token: Separator
  start:
    index: 102
    line: 13
    column: 9
  end:
    index: 103
    line: 13
    column: 10
- token: Scalar
  start:
    index: 103
    line: 13
    column: 10
  end:
    index: 107
    line: 13
    column: 14
- token: MappingValue
  start:
    index: 107
    line: 13
    column: 14
  end:
    index: 108
    line: 13
    column: 15
- token: Separator
  start:
    index: 108
    line: 13
    column: 15
  end:
    index: 109
    line: 13
    column: 16
- token: Scalar
  start:
    index: 109
    line: 13
    column: 16
  end:
    index: 115
    line: 13
    column: 22
- token: Break
  start:
    index: 115
    line: 13
    column: 22
  end:
    index: 117
    line: 14
    column: 0
- token: DirectivesEnd
  start:
    index: 117
    line: 14
    column: 0
  end:
    index: 120
    line: 14
    column: 3
- token: Break
  start:
    index: 120
    line: 14
    column: 3
  end:
    index: 122
    line: 15
    column: 0
- token: Indent
  start:
    index: 122
    line: 15
    column: 0
  end:
    index: 122
    line: 15
    column: 0
- token: Scalar
  start:
    index: 122
    line: 15
    column: 0
  end:
    index: 124
    line: 15
    column: 2
- token: MappingValue
  start:
    index: 124
    line: 15
    column: 2
  end:
    index: 125
    line: 15
    column: 3
- token: Separator
  start:
    index: 125
    line: 15
    column: 3
  end:
    index: 126
    line: 15
    column: 4
- token: Scalar
  start:
    index: 126
    line: 15
    column: 4
  end:
    index: 127
    line: 15
    column: 5
- token: Break
  start:
    index: 127
    line: 15
    column: 5
  end:
    index: 129
    line: 16
    column: 0
- token: Indent
  start:
    index: 129
    line: 16
    column: 0
  end:
    index: 129
    line: 16
    column: 0
- token: Anchor
  start:
    index: 129
    line: 16
    column: 0
  end:
    index: 130
    line: 16
    column: 1
- token: AnchorName
  start:
    index: 130
    line: 16
    column: 1
  end:
    index: 137
    line: 16
    column: 8
- token: Separator
  start:
    index: 137
    line: 16
    column: 8
  end:
    index: 138
    line: 16
    column: 9
- token: Scalar
  start:
    index: 138
    line: 16
    column: 9
  end:
    index: 140
    line: 16
    column: 11
- token: MappingValue
  start:
    index: 140
    line: 16
    column: 11
  end:
    index: 141
    line: 16
    column: 12
- token: Separator
  start:
    index: 141
    line: 16
    column: 12
  end:
    index: 142
    line: 16
    column: 13
- token: Scalar
  start:
    index: 142
    line: 16
    column: 13
  end:
    index: 143
    line: 16
    column: 14
- token: Break
  start:
    index: 143
    line: 16
    column: 14
  end:
    index: 145
    line: 17
    column: 0
- token: DirectivesEnd
  start:
    index: 145
    line: 17
    column: 0
  end:
    index: 148
    line: 17
    column: 3
- token: Break
  start:
    index: 148
    line: 17
    column: 3
  end:
    index: 150
    line: 18
    column: 0
- token: Indent
  start:
    index: 150
    line: 18
    column: 0
  end:
    index: 150
    line: 18
    column: 0
- token: TagHandle
  start:
    index: 150
    line: 18
    column: 0
  end:
    index: 152
    line: 18
    column: 2
- token: TagSuffix
  start:
    index: 152
    line: 18
    column: 2
  end:
    index: 155
    line: 18
    column: 5
- token: Break
  start:
    index: 155
    line: 18
    column: 5
  end:
    index: 157
    line: 19
    column: 0
- token: Indent
  start:
    index: 157
    line: 19
    column: 0
  end:
    index: 157
    line: 19
    column: 0
- token: Anchor
  start:
    index: 157
    line: 19
    column: 0
  end:
    index: 158
    line: 19
    column: 1
- token: AnchorName
  start:
    index: 158
    line: 19
    column: 1
  end:
    index: 160
    line: 19
    column: 3
- token: Separator
  start:
    index: 160
    line: 19
    column: 3
  end:
    index: 161
    line: 19
    column: 4
- token: TagHandle
  start:
    index: 161
    line: 19
    column: 4
  end:
    index: 163
    line: 19
    column: 6
- token: TagSuffix
  start:
    index: 163
    line: 19
    column: 6
  end:
    index: 166
    line: 19
    column: 9
- token: Separator
  start:
    index: 166
    line: 19
    column: 9
  end:
    index: 167
    line: 19
    column: 10
- token: Scalar
  start:
    index: 167
    line: 19
    column: 10
  end:
    index: 171
    line: 19
    column: 14
- token: MappingValue
  start:
    index: 171
    line: 19
    column: 14
  end:
    index: 172
    line: 19
    column: 15
- token: Separator
  start:
    index: 172
    line: 19
    column: 15
  end:
    index: 173
    line: 19
    column: 16
- token: Scalar
  start:
    index: 173
    line: 19
    column: 16
  end:
    index: 179
    line: 19
    column: 22
- token: Break
  start:
    index: 179
    line: 19
    column: 22
  end:
    index: 181
    line: 20
    column: 0
- token: DirectivesEnd
  start:
    index: 181
    line: 20
    column: 0
  end:
    index: 184
    line: 20
    column: 3
- token: Break
  start:
    index: 184
    line: 20
    column: 3
  end:
    index: 186
    line: 21
    column: 0
- token: Indent
  start:
    index: 186
    line: 21
    column: 0
  end:
    index: 186
    line: 21
    column: 0
- token: TagHandle
  start:
    index: 186
    line: 21
    column: 0
  end:
    index: 188
    line: 21
    column: 2
- token: TagSuffix
  start:
    index: 188
    line: 21
    column: 2
  end:
    index: 191
    line: 21
    column: 5
- token: Break
  start:
    index: 191
    line: 21
    column: 5
  end:
    index: 193
    line: 22
    column: 0
- token: Indent
  start:
    index: 193
    line: 22
    column: 0
  end:
    index: 193
    line: 22
    column: 0
- token: TagHandle
  start:
    index: 193
    line: 22
    column: 0
  end:
    index: 195
    line: 22
    column: 2
- token: TagSuffix
  start:
    index: 195
    line: 22
    column: 2
  end:
    index: 198
    line: 22
    column: 5
- token: Separator
  start:
    index: 198
    line: 22
    column: 5
  end:
    index: 199
    line: 22
    column: 6
- token: Anchor
  start:
    index: 199
    line: 22
    column: 6
  end:
    index: 200
    line: 22
    column: 7
- token: AnchorName
  start:
    index: 200
    line: 22
    column: 7
  end:
    index: 203
    line: 22
    column: 10
- token: Separator
  start:
    index: 203
    line: 22
    column: 10
  end:
    index: 204
    line: 22
    column: 11
- token: Scalar
  start:
    index: 204
    line: 22
    column: 11
  end:
    index: 209
    line: 22
    column: 16
- token: MappingValue
  start:
    index: 209
    line: 22
    column: 16
  end:
    index: 210
    line: 22
    column: 17
- token: Separator
  start:
    index: 210
    line: 22
    column: 17
  end:
    index: 211
    line: 22
    column: 18
- token: Scalar
  start:
    index: 211
    line: 22
    column: 18
  end:
    index: 217
    line: 22
    column: 24
- token: Break
  start:
    index: 217
    line: 22
    column: 24
  end:
    index: 219
    line: 23
    column: 0
- token: DirectivesEnd
  start:
    index: 219
    line: 23
    column: 0
  end:
    index: 222
    line: 23
    column: 3
- token: Break
  start:
    index: 222
    line: 23
    column: 3
  end:
    index: 224
    line: 24
    column: 0
- token: Indent
  start:
    index: 224
    line: 24
    column: 0
  end:
    index: 224
    line: 24
    column: 0
- token: TagHandle
  start:
    index: 224
    line: 24
    column: 0
  end:
    index: 226
    line: 24
    column: 2
- token: TagSuffix
  start:
    index: 226
    line: 24
    column: 2
  end:
    index: 229
    line: 24
    column: 5
- token: Separator
  start:
    index: 229
    line: 24
    column: 5
  end:
    index: 230
    line: 24
    column: 6
- token: Anchor
  start:
    index: 230
    line: 24
    column: 6
  end:
    index: 231
    line: 24
    column: 7
- token: AnchorName
  start:
    index: 231
    line: 24
    column: 7
  end:
    index: 234
    line: 24
    column: 10
- token: Break
  start:
    index: 234
    line: 24
    column: 10
  end:
    index: 236
    line: 25
    column: 0
- token: Indent
  start:
    index: 236
    line: 25
    column: 0
  end:
    index: 236
    line: 25
    column: 0
- token: Scalar
  start:
    index: 236
    line: 25
    column: 0
  end:
    index: 243
    line: 25
    column: 7
- token: Break
  start:
    index: 243
    line: 25
    column: 7
  end:
    index: 245
    line: 26
    column: 0

