tests/suite/snapshots/suite__case_9mmw.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: SequenceStart
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Scalar
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: MappingValue
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: Separator
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: Scalar
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 19
- token: Separator
  start:
    line: 0
    column: 19
  end:
    line: 0
    column: 20
- token: SequenceEnd
  start:
    line: 0
    column: 20
  end:
    line: 0
    column: 21
- token: Break
  start:
    line: 0
    column: 21
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: SequenceStart
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: DoubleQuote
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: DoubleQuoted
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 14
- token: DoubleQuote
  start:
    line: 1
    column: 14
  end:
    line: 1
    column: 15
- token: MappingValue
  start:
    line: 1
    column: 15
  end:
    line: 1
    column: 16
- token: Scalar
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 24
- token: Separator
  start:
    line: 1
    column: 24
  end:
    line: 1
    column: 25
- token: SequenceEnd
  start:
    line: 1
    column: 25
  end:
    line: 1
    column: 26
- token: Break
  start:
    line: 1
    column: 26
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: SequenceStart
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Separator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: MappingStart
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: Scalar
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 9
- token: MappingValue
  start:
    line: 2
    column: 9
  end:
    line: 2
    column: 10
- token: Separator
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 11
- token: Scalar
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 15
- token: MappingEnd
  start:
    line: 2
    column: 15
  end:
    line: 2
    column: 16
- token: MappingValue
  start:
    line: 2
    column: 16
  end:
    line: 2
    column: 17
- token: Scalar
  start:
    line: 2
    column: 17
  end:
    line: 2
    column: 25
- token: Separator
  start:
    line: 2
    column: 25
  end:
    line: 2
    column: 26
- token: SequenceEnd
  start:
    line: 2
    column: 26
  end:
    line: 2
    column: 27
- token: Break
  start:
    line: 2
    column: 27
  end:
    line: 3
    column: 0

