tests/suite/snapshots/suite__case_9mqt_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: DoubleQuote
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 5
- token: DoubleQuoted
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: ScalarSpace
  start:
    line: 0
    column: 6
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: DoubleQuoted
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 4
- token: ScalarSpace
  start:
    line: 1
    column: 4
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: DoubleQuoted
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: DoubleQuote
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Break
  start:
    line: 2
    column: 2
  end:
    line: 3
    column: 0

