tests/suite/snapshots/suite__case_9mqt_01.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at  \"a\r\n... x\r\nb\"\r\n"
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3

