tests/suite/snapshots/suite__case_9sa2.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: MappingStart
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: DoubleQuote
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: DoubleQuoted
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 16
- token: DoubleQuote
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 17
- token: MappingValue
  start:
    line: 1
    column: 17
  end:
    line: 1
    column: 18
- token: Separator
  start:
    line: 1
    column: 18
  end:
    line: 1
    column: 19
- token: Scalar
  start:
    line: 1
    column: 19
  end:
    line: 1
    column: 24
- token: MappingEnd
  start:
    line: 1
    column: 24
  end:
    line: 1
    column: 25
- token: Break
  start:
    line: 1
    column: 25
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: MappingStart
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Separator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: DoubleQuote
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: DoubleQuoted
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 10
- token: ScalarSpace
  start:
    line: 2
    column: 10
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: DoubleQuoted
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 6
- token: DoubleQuote
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 7
- token: MappingValue
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Separator
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: Scalar
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 14
- token: MappingEnd
  start:
    line: 3
    column: 14
  end:
    line: 3
    column: 15
- token: Break
  start:
    line: 3
    column: 15
  end:
    line: 4
    column: 0

