tests/suite/snapshots/suite__case_9shh.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 6
    line: 0
    column: 6
- token: MappingValue
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: Separator
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 8
    line: 0
    column: 8
- token: SingleQuote
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 9
    line: 0
    column: 9
- token: SingleQuoted
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 13
    line: 0
    column: 13
- token: SingleQuote
  start:
    index: 13
    line: 0
    column: 13
  end:
    index: 14
    line: 0
    column: 14
- token: Break
  start:
    index: 14
    line: 0
    column: 14
  end:
    index: 16
    line: 1
    column: 0
- token: Indent
  start:
    index: 16
    line: 1
    column: 0
  end:
    index: 16
    line: 1
    column: 0
- token: Scalar
  start:
    index: 16
    line: 1
    column: 0
  end:
    index: 22
    line: 1
    column: 6
- token: MappingValue
  start:
    index: 22
    line: 1
    column: 6
  end:
    index: 23
    line: 1
    column: 7
- token: Separator
  start:
    index: 23
    line: 1
    column: 7
  end:
    index: 24
    line: 1
    column: 8
- token: DoubleQuote
  start:
    index: 24
    line: 1
    column: 8
  end:
    index: 25
    line: 1
    column: 9
- token: DoubleQuoted
  start:
    index: 25
    line: 1
    column: 9
  end:
    index: 29
    line: 1
    column: 13
- token: DoubleQuote
  start:
    index: 29
    line: 1
    column: 13
  end:
    index: 30
    line: 1
    column: 14
- token: Break
  start:
    index: 30
    line: 1
    column: 14
  end:
    index: 32
    line: 2
    column: 0

