tests/suite/snapshots/suite__case_9u5k.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Comment
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: CommentText
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 20
- token: Break
  start:
    line: 1
    column: 20
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Indent
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 6
- token: Separator
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 10
- token: MappingValue
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 11
- token: Separator
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 12
- token: Scalar
  start:
    line: 2
    column: 12
  end:
    line: 2
    column: 22
- token: Break
  start:
    line: 2
    column: 22
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 10
- token: MappingValue
  start:
    line: 3
    column: 10
  end:
    line: 3
    column: 11
- token: Separator
  start:
    line: 3
    column: 11
  end:
    line: 3
    column: 12
- token: Scalar
  start:
    line: 3
    column: 12
  end:
    line: 3
    column: 13
- token: Break
  start:
    line: 3
    column: 13
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: SequenceEntry
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Indent
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 6
- token: Separator
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 10
- token: MappingValue
  start:
    line: 4
    column: 10
  end:
    line: 4
    column: 11
- token: Separator
  start:
    line: 4
    column: 11
  end:
    line: 4
    column: 12
- token: Scalar
  start:
    line: 4
    column: 12
  end:
    line: 4
    column: 22
- token: Break
  start:
    line: 4
    column: 22
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 10
- token: MappingValue
  start:
    line: 5
    column: 10
  end:
    line: 5
    column: 11
- token: Separator
  start:
    line: 5
    column: 11
  end:
    line: 5
    column: 12
- token: Scalar
  start:
    line: 5
    column: 12
  end:
    line: 5
    column: 13
- token: Break
  start:
    line: 5
    column: 13
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: SequenceEntry
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Indent
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 2
- token: Scalar
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 6
- token: Separator
  start:
    line: 6
    column: 6
  end:
    line: 6
    column: 10
- token: MappingValue
  start:
    line: 6
    column: 10
  end:
    line: 6
    column: 11
- token: Separator
  start:
    line: 6
    column: 11
  end:
    line: 6
    column: 12
- token: Scalar
  start:
    line: 6
    column: 12
  end:
    line: 6
    column: 21
- token: Break
  start:
    line: 6
    column: 21
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 2
- token: Scalar
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 10
- token: MappingValue
  start:
    line: 7
    column: 10
  end:
    line: 7
    column: 11
- token: Separator
  start:
    line: 7
    column: 11
  end:
    line: 7
    column: 12
- token: Scalar
  start:
    line: 7
    column: 12
  end:
    line: 7
    column: 13
- token: Break
  start:
    line: 7
    column: 13
  end:
    line: 8
    column: 0

