tests/suite/snapshots/suite__case_9wxw.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: CommentText
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: TagHandle
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: TagSuffix
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 4
- token: Separator
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: DoubleQuote
  start:
    line: 1
    column: 5
  end:
    line: 1
    column: 6
- token: DoubleQuoted
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 9
- token: DoubleQuote
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Break
  start:
    line: 1
    column: 10
  end:
    line: 2
    column: 0
- token: DocumentEnd
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 3
- token: Break
  start:
    line: 2
    column: 3
  end:
    line: 3
    column: 0
- token: Comment
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: CommentText
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 8
- token: Break
  start:
    line: 3
    column: 8
  end:
    line: 4
    column: 0
- token: Directive
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: DirectiveName
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 4
- token: Separator
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: TagHandle
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: Separator
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: TagPrefix
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 32
- token: Break
  start:
    line: 4
    column: 32
  end:
    line: 5
    column: 0
- token: DirectivesEnd
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 3
- token: Break
  start:
    line: 5
    column: 3
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: TagHandle
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: TagSuffix
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 4
- token: Separator
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 5
- token: DoubleQuote
  start:
    line: 6
    column: 5
  end:
    line: 6
    column: 6
- token: DoubleQuoted
  start:
    line: 6
    column: 6
  end:
    line: 6
    column: 9
- token: DoubleQuote
  start:
    line: 6
    column: 9
  end:
    line: 6
    column: 10
- token: Break
  start:
    line: 6
    column: 10
  end:
    line: 7
    column: 0

