tests/suite/snapshots/suite__case_9yrd.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: ScalarSpace
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 3
    line: 1
    column: 0
- token: Scalar
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 4
    line: 1
    column: 1
- token: Separator
  start:
    index: 4
    line: 1
    column: 1
  end:
    index: 6
    line: 1
    column: 3
- token: ScalarSpace
  start:
    index: 6
    line: 1
    column: 3
  end:
    index: 8
    line: 2
    column: 0
- token: Indent
  start:
    index: 8
    line: 2
    column: 0
  end:
    index: 8
    line: 2
    column: 0
- token: Separator
  start:
    index: 8
    line: 2
    column: 0
  end:
    index: 10
    line: 2
    column: 2
- token: Scalar
  start:
    index: 10
    line: 2
    column: 2
  end:
    index: 11
    line: 2
    column: 3
- token: ScalarSpace
  start:
    index: 11
    line: 2
    column: 3
  end:
    index: 13
    line: 3
    column: 0
- token: Indent
  start:
    index: 13
    line: 3
    column: 0
  end:
    index: 13
    line: 3
    column: 0
- token: Scalar
  start:
    index: 13
    line: 3
    column: 0
  end:
    index: 14
    line: 3
    column: 1
- token: Break
  start:
    index: 14
    line: 3
    column: 1
  end:
    index: 16
    line: 4
    column: 0
- token: Indent
  start:
    index: 16
    line: 4
    column: 0
  end:
    index: 16
    line: 4
    column: 0
- token: ScalarBreak
  start:
    index: 16
    line: 4
    column: 0
  end:
    index: 18
    line: 5
    column: 0
- token: Indent
  start:
    index: 18
    line: 5
    column: 0
  end:
    index: 18
    line: 5
    column: 0
- token: Scalar
  start:
    index: 18
    line: 5
    column: 0
  end:
    index: 19
    line: 5
    column: 1
- token: Break
  start:
    index: 19
    line: 5
    column: 1
  end:
    index: 21
    line: 6
    column: 0

